<resources>
    <string name="app_name">Diving life</string>

    <string name="hello_world">Hello world!</string>
    <string name="titulo_app">DIVING LIFE!</string>
    <string name="atividade_mergulho">Atividades de Mergulho</string>
    <string name="mergulho_saida_praia">Saída de Praia</string>
    <string name="mergulho_naufragio">Naufragio</string>
    <string name="web_page">Descição do Naufragio</string>
    <string name="action_settings">Settings</string>
    <string name="cadastro">cadastro de naufragio</string>
    <string name="todo">todo</string>
    <string name="gravar">gravar</string>
    <string name="voltar">voltar</string>
    <string name="site" />
    <string name="nome" />
    <string name="Nome">Nome:</string>
    <string name="Profundidade">Profundidade:</string>
    <string name="Localizacao">Localização:</string>
    <string name="Descricao">Descrição:</string>
    <string name="Historia">Historia</string>
    <string name="title_activity_cadastro_naufragio">Cadastro Naufragio</string>

    <string name="lbl_Nome">Nome</string>
    <string name="lbl_Profundidade">Profundidade</string>
    <string name="lbl_Localizacao">Localização</string>
    <string name="lbl_Historia">História</string>


    <string name="lbl_salvar">Salvar</string>
    <string name="lbl_alterar">Alterar</string>
    <string name="lbl_excluir">Excluir</string>
</resources>
